Adding rake, whenever and friends to schedule tasks.

--- a/web_shell/VM-Framework/Gemfile
+++ b/web_shell/VM-Framework/Gemfile
@@ -12,3 +12,5 @@ gem 'redcarpet'
 gem 'activesupport', :require => "active_support/all"
 gem 'i18n'
 gem 'rack-flash3'
+gem 'whenever', :require => false
+gem 'rake'
