Add a schedule file in local_cloud server.

--- a/web_shell/local_cloud/Gemfile
+++ b/web_shell/local_cloud/Gemfile
@@ -10,3 +10,4 @@ gem 'redis'
 gem 'redis-namespace'
 gem 'activesupport', :require => "active_support/all"
 gem 'i18n'
+gem 'whenever', :require => false
