--- a/web_shell/agents_generator/sample_agent/config/config.yml.example
+++ b/web_shell/agents_generator/sample_agent/config/config.yml.example
@@ -1,5 +1,5 @@
 default: &DEFAULT
   Dynamic_channel_str: com.mdi.services.XXProjectName
-
+  Device_side_package_name_str: com.mdi.services.XXProjectName.protogen
 
 development: *DEFAULT
