--- a/web_shell/agents_generator/exts/protogen/protocol_generator/config/config.json
+++ b/web_shell/agents_generator/exts/protogen/protocol_generator/config/config.json
@@ -1,1 +1,1 @@
-{"pg_version":"0.4-dev-9695afc16e","default":{"mdi_framework_jar":"config/mdi-framework-3.X.jar"}}
+{"pg_version":"0.4-dev-b668c11ec6","default":{"mdi_framework_jar":"config/mdi-framework-3.X.jar","message_part_size":65536,"message_size_limit":1048576}}
