Complete tracks mapping.

--- a/web_shell/local_cloud/API/mapping_track_field_number.yml
+++ b/web_shell/local_cloud/API/mapping_track_field_number.yml
@@ -1,5 +1,254 @@
-3: gps_pos
-4: gps_lat
-501: test_average
-502: test_grup
-503: test_jambon
+"0": ""
+"1": ""
+"10": ""
+"100": BEHAVE_ID
+"101": BEHAVE_LONG
+"102": BEHAVE_LAT
+"103": BEHAVE_DAY_OF_YEAR
+"104": BEHAVE_TIME_OF_DAY
+"105": BEHAVE_GPS_SPEED_BEGIN
+"106": BEHAVE_GPS_SPEED_PEAK
+"107": BEHAVE_GPS_SPEED_END
+"108": BEHAVE_GPS_HEADING_BEGIN
+"109": BEHAVE_GPS_HEADING_PEAK
+"11": ""
+"110": BEHAVE_GPS_HEADING_END
+"111": BEHAVE_ACC_X_BEGIN
+"112": BEHAVE_ACC_X_PEAK
+"113": BEHAVE_ACC_X_END
+"114": BEHAVE_ACC_Y_BEGIN
+"115": BEHAVE_ACC_Y_PEAK
+"116": BEHAVE_ACC_Y_END
+"117": BEHAVE_ACC_Z_BEGIN
+"118": BEHAVE_ACC_Z_PEAK
+"119": BEHAVE_ACC_Z_END
+"12": ""
+"120": BEHAVE_ELAPSED
+"121": BEHAVE_UNIQUE_ID
+"122": MDI_CRASH_DETECTED
+"123": ""
+"124": ""
+"125": ""
+"126": LAST_CALIB_ACCELERO_TIME
+"127": MDI_EVENT
+"128": ""
+"129": ""
+"13": ""
+"130": ""
+"131": ""
+"132": ""
+"133": ""
+"134": ""
+"135": ""
+"136": ""
+"137": ""
+"138": ""
+"139": ""
+"14": MDI_DIO_IGNITION
+"140": ""
+"141": ""
+"142": ""
+"143": ""
+"144": ""
+"145": ""
+"146": ""
+"147": ""
+"148": ""
+"149": ""
+"15": MDI_BATT
+"150": ""
+"151": ""
+"152": ""
+"153": ""
+"154": ""
+"155": ""
+"156": ""
+"157": ""
+"158": ""
+"159": ""
+"16": MDI_GPRS_HEADER
+"160": ""
+"161": ""
+"162": ""
+"163": ""
+"164": ""
+"165": ""
+"166": ""
+"167": ""
+"168": ""
+"169": ""
+"17": MDI_RSSI
+"170": ""
+"171": ""
+"172": ""
+"173": ""
+"174": ""
+"175": ""
+"176": ""
+"177": ""
+"178": ""
+"179": ""
+"18": ""
+"180": ""
+"181": ""
+"182": ""
+"183": ""
+"184": ""
+"185": ""
+"186": ""
+"187": ""
+"188": ""
+"189": ""
+"19": MDI_CHRONOTACHYGRAPH_FIRST_DRIVER_STATE
+"190": ""
+"191": ""
+"192": ""
+"193": ""
+"194": ""
+"195": ""
+"196": ""
+"197": ""
+"198": ""
+"199": ""
+"2": ""
+"20": MDI_CHRONOTACHYGRAPH_FIRST_DRIVER_DRIVING_STATE
+"200": ""
+"201": ""
+"202": ""
+"203": ""
+"204": ""
+"205": ""
+"206": ""
+"207": ""
+"208": ""
+"209": ""
+"21": MDI_CHRONOTACHYGRAPH_DAILYMETER
+"210": ""
+"211": ""
+"212": ""
+"213": ""
+"214": ""
+"215": ""
+"216": ""
+"217": ""
+"218": ""
+"219": ""
+"22": MDI_CHRONOTACHYGRAPH_ODOMETER
+"220": ""
+"221": ""
+"222": ""
+"223": ""
+"224": ""
+"225": ""
+"226": ""
+"227": ""
+"228": ""
+"229": ""
+"23": MDI_ODO_PARTIAL_KM
+"230": ""
+"231": ""
+"232": ""
+"233": ""
+"234": ""
+"235": ""
+"236": ""
+"237": ""
+"238": ""
+"239": ""
+"24": MDI_ODO_FULL
+"240": ""
+"241": ""
+"242": ""
+"243": ""
+"244": ""
+"245": ""
+"246": ""
+"247": ""
+"248": ""
+"249": ""
+"25": MDI_CHRONOTACHYGRAPH_DRIVING_TIME
+"250": ""
+"26": MDI_DIO_ALARM
+"27": MDI_DRIVER_ID
+"28": MDI_TEMP_1
+"29": MDI_TEMP_2
+"3": MDI_GPRMC_VALID
+"30": MDI_TEMP_3
+"31": MDI_TEMP_4
+"32": MDI_TEMP_5
+"33": MDI_TEMP_6
+"34": MDI_TEMP_7
+"35": MDI_TEMP_8
+"36": MDI_TEMP_9
+"37": MDI_TEMP_10
+"38": MDI_DIO_IN_TOR
+"39": ""
+"4": ""
+"40": ""
+"41": ""
+"42": ""
+"43": ""
+"44": ""
+"45": ""
+"46": ""
+"47": ""
+"48": ""
+"49": ""
+"5": ""
+"50": ""
+"501": test_average
+"502": test_grup
+"503": test_jambon
+"51": ""
+"52": MDI_CHRONOTACHYGRAPH_FIRST_DRIVER_ID
+"53": MDI_AREA_LIST
+"54": MDI_CHRONOTACHYGRAPH_TIMESTAMP
+"55": MDI_GPS_FIXED_SAT_NUM
+"56": MDI_MVT_STATE
+"57": MDI_BOOT_REASON
+"58": MDI_SHUTDOWN_TYPE_AND_REASON
+"59": MDI_BATT_VOLT
+"6": ""
+"60": MDI_TX_KBYTES
+"61": MDI_RX_KBYTES
+"62": MDI_BATT_WARMUP
+"63": MDI_BATT_CHARGING
+"64": MDI_CHRONOTACHYGRAPH_SECOND_DRIVER_STATE
+"65": MDI_CHRONOTACHYGRAPH_SECOND_DRIVER_ID
+"66": MDI_CHRONOTACHYGRAPH_VRN
+"67": MDI_CHRONOTACHYGRAPH_VIN
+"68": MDI_DIO_OUT_TOR
+"69": MDI_RELAYCONTROL_STATE
+"7": ""
+"70": MDI_MODEM_SIM_ICCID
+"71": MDI_MODEM_SIM_IMSI
+"72": MDI_SERIAL_PPP_STATE
+"73": MDI_SMARTCARD_STATE
+"74": MDI_SMARTCARD_SERIAL_NUMBER
+"75": MDI_SMARTCARD_EXPIRACY_DATE
+"76": MDI_SMARTCARD_USER_NUMBER
+"77": MDI_SMARTCARD_NAME
+"78": MDI_SMARTCARD_SURNAME
+"79": MDI_SMARTCARD_BIRTHDAY
+"8": MDI_GPS_SPEED
+"80": MDI_SMARTCARD_ADDRESS
+"81": MDI_SMARTCARD_HIRING_NUMBER
+"82": MDI_SMARTCARD_HIRING_DATE
+"83": MDI_SMARTCARD_PHONE_NUMBER
+"84": MDI_SMARTCARD_LICENSE_NUMBER
+"85": MDI_SMARTCARD_PARC_NUMBER
+"86": MDI_SMARTCARD_SECU_NUMBER
+"87": MDI_CONNECTED_BOARD_ID
+"88": MDI_FMS_TOTAL_USED_FUEL
+"89": MDI_FMS_FUEL_LEVEL
+"9": MDI_GPS_DIR
+"90": MDI_FMS_AXLE_LOCATION
+"91": MDI_FMS_TOTAL_AXLE_WEIGHT
+"92": MDI_FMS_ENGINE_HOURS
+"93": MDI_FMS_VEHICLE_ID
+"94": ""
+"95": MDI_FMS_VEHICLE_DISTANCE
+"96": MDI_FMS_SERVICE_DISTANCE
+"97": MDI_FMS_ENGINE_COOLANT_TEMP
+"98": ""
+"99": MDI_BOARD_ID
