Add missing fields.

--- a/web_shell/local_cloud/API/mapping_track_field_number.yml
+++ b/web_shell/local_cloud/API/mapping_track_field_number.yml
@@ -1,178 +1,33 @@
 "0": ""
 "1": ""
-"10": ""
-"100": BEHAVE_ID
-"101": BEHAVE_LONG
-"102": BEHAVE_LAT
-"103": BEHAVE_DAY_OF_YEAR
-"104": BEHAVE_TIME_OF_DAY
-"105": BEHAVE_GPS_SPEED_BEGIN
-"106": BEHAVE_GPS_SPEED_PEAK
-"107": BEHAVE_GPS_SPEED_END
-"108": BEHAVE_GPS_HEADING_BEGIN
-"109": BEHAVE_GPS_HEADING_PEAK
-"11": ""
-"110": BEHAVE_GPS_HEADING_END
-"111": BEHAVE_ACC_X_BEGIN
-"112": BEHAVE_ACC_X_PEAK
-"113": BEHAVE_ACC_X_END
-"114": BEHAVE_ACC_Y_BEGIN
-"115": BEHAVE_ACC_Y_PEAK
-"116": BEHAVE_ACC_Y_END
-"117": BEHAVE_ACC_Z_BEGIN
-"118": BEHAVE_ACC_Z_PEAK
-"119": BEHAVE_ACC_Z_END
-"12": ""
-"120": BEHAVE_ELAPSED
-"121": BEHAVE_UNIQUE_ID
-"122": MDI_CRASH_DETECTED
-"123": ""
-"124": ""
-"125": ""
-"126": LAST_CALIB_ACCELERO_TIME
-"127": MDI_EVENT
-"128": ""
-"129": ""
-"13": ""
-"130": ""
-"131": ""
-"132": ""
-"133": ""
-"134": ""
-"135": ""
-"136": ""
-"137": ""
-"138": ""
-"139": ""
-"14": MDI_DIO_IGNITION
-"140": ""
-"141": ""
-"142": ""
-"143": ""
-"144": ""
-"145": ""
-"146": ""
-"147": ""
-"148": ""
-"149": ""
-"15": MDI_BATT
-"150": ""
-"151": ""
-"152": ""
-"153": ""
-"154": ""
-"155": ""
-"156": ""
-"157": ""
-"158": ""
-"159": ""
-"16": MDI_GPRS_HEADER
-"160": ""
-"161": ""
-"162": ""
-"163": ""
-"164": ""
-"165": ""
-"166": ""
-"167": ""
-"168": ""
-"169": ""
-"17": MDI_RSSI
-"170": ""
-"171": ""
-"172": ""
-"173": ""
-"174": ""
-"175": ""
-"176": ""
-"177": ""
-"178": ""
-"179": ""
-"18": ""
-"180": ""
-"181": ""
-"182": ""
-"183": ""
-"184": ""
-"185": ""
-"186": ""
-"187": ""
-"188": ""
-"189": ""
-"19": MDI_CHRONOTACHYGRAPH_FIRST_DRIVER_STATE
-"190": ""
-"191": ""
-"192": ""
-"193": ""
-"194": ""
-"195": ""
-"196": ""
-"197": ""
-"198": ""
-"199": ""
 "2": ""
+"3": MDI_GPRMC_VALID
+"4": ""
+"5": ""
+"6": ""
+"7": ""
+"8": MDI_GPS_SPEED
+"9": MDI_GPS_DIR
+"10": ""
+"11": ""
+"12": ""
+"13": ""
+"14": MDI_DIO_IGNITION
+"15": MDI_BATT
+"16": MDI_GPRS_HEADER
+"17": MDI_RSSI
+"18": ""
+"19": MDI_CHRONOTACHYGRAPH_FIRST_DRIVER_STATE
 "20": MDI_CHRONOTACHYGRAPH_FIRST_DRIVER_DRIVING_STATE
-"200": ""
-"201": ""
-"202": ""
-"203": ""
-"204": ""
-"205": ""
-"206": ""
-"207": ""
-"208": ""
-"209": ""
 "21": MDI_CHRONOTACHYGRAPH_DAILYMETER
-"210": ""
-"211": ""
-"212": ""
-"213": ""
-"214": ""
-"215": ""
-"216": ""
-"217": ""
-"218": ""
-"219": ""
 "22": MDI_CHRONOTACHYGRAPH_ODOMETER
-"220": ""
-"221": ""
-"222": ""
-"223": ""
-"224": ""
-"225": ""
-"226": ""
-"227": ""
-"228": ""
-"229": ""
 "23": MDI_ODO_PARTIAL_KM
-"230": ""
-"231": ""
-"232": ""
-"233": ""
-"234": ""
-"235": ""
-"236": ""
-"237": ""
-"238": ""
-"239": ""
 "24": MDI_ODO_FULL
-"240": ""
-"241": ""
-"242": ""
-"243": ""
-"244": ""
-"245": ""
-"246": ""
-"247": ""
-"248": ""
-"249": ""
 "25": MDI_CHRONOTACHYGRAPH_DRIVING_TIME
-"250": ""
 "26": MDI_DIO_ALARM
 "27": MDI_DRIVER_ID
 "28": MDI_TEMP_1
 "29": MDI_TEMP_2
-"3": MDI_GPRMC_VALID
 "30": MDI_TEMP_3
 "31": MDI_TEMP_4
 "32": MDI_TEMP_5
@@ -183,7 +38,6 @@
 "37": MDI_TEMP_10
 "38": MDI_DIO_IN_TOR
 "39": ""
-"4": ""
 "40": ""
 "41": ""
 "42": ""
@@ -194,11 +48,7 @@
 "47": ""
 "48": ""
 "49": ""
-"5": ""
 "50": ""
-"501": test_average
-"502": test_grup
-"503": test_jambon
 "51": ""
 "52": MDI_CHRONOTACHYGRAPH_FIRST_DRIVER_ID
 "53": MDI_AREA_LIST
@@ -208,7 +58,6 @@
 "57": MDI_BOOT_REASON
 "58": MDI_SHUTDOWN_TYPE_AND_REASON
 "59": MDI_BATT_VOLT
-"6": ""
 "60": MDI_TX_KBYTES
 "61": MDI_RX_KBYTES
 "62": MDI_BATT_WARMUP
@@ -219,7 +68,6 @@
 "67": MDI_CHRONOTACHYGRAPH_VIN
 "68": MDI_DIO_OUT_TOR
 "69": MDI_RELAYCONTROL_STATE
-"7": ""
 "70": MDI_MODEM_SIM_ICCID
 "71": MDI_MODEM_SIM_IMSI
 "72": MDI_SERIAL_PPP_STATE
@@ -230,7 +78,6 @@
 "77": MDI_SMARTCARD_NAME
 "78": MDI_SMARTCARD_SURNAME
 "79": MDI_SMARTCARD_BIRTHDAY
-"8": MDI_GPS_SPEED
 "80": MDI_SMARTCARD_ADDRESS
 "81": MDI_SMARTCARD_HIRING_NUMBER
 "82": MDI_SMARTCARD_HIRING_DATE
@@ -241,14 +88,164 @@
 "87": MDI_CONNECTED_BOARD_ID
 "88": MDI_FMS_TOTAL_USED_FUEL
 "89": MDI_FMS_FUEL_LEVEL
-"9": MDI_GPS_DIR
 "90": MDI_FMS_AXLE_LOCATION
 "91": MDI_FMS_TOTAL_AXLE_WEIGHT
 "92": MDI_FMS_ENGINE_HOURS
 "93": MDI_FMS_VEHICLE_ID
-"94": ""
+"94": MDI_FMS_SOFTWARE_ID
 "95": MDI_FMS_VEHICLE_DISTANCE
 "96": MDI_FMS_SERVICE_DISTANCE
 "97": MDI_FMS_ENGINE_COOLANT_TEMP
-"98": ""
+"98": MDI_FMS_INFORMATION
 "99": MDI_BOARD_ID
+"100": BEHAVE_ID
+"101": BEHAVE_LONG
+"102": BEHAVE_LAT
+"103": BEHAVE_DAY_OF_YEAR
+"104": BEHAVE_TIME_OF_DAY
+"105": BEHAVE_GPS_SPEED_BEGIN
+"106": BEHAVE_GPS_SPEED_PEAK
+"107": BEHAVE_GPS_SPEED_END
+"108": BEHAVE_GPS_HEADING_BEGIN
+"109": BEHAVE_GPS_HEADING_PEAK
+"110": BEHAVE_GPS_HEADING_END
+"111": BEHAVE_ACC_X_BEGIN
+"112": BEHAVE_ACC_X_PEAK
+"113": BEHAVE_ACC_X_END
+"114": BEHAVE_ACC_Y_BEGIN
+"115": BEHAVE_ACC_Y_PEAK
+"116": BEHAVE_ACC_Y_END
+"117": BEHAVE_ACC_Z_BEGIN
+"118": BEHAVE_ACC_Z_PEAK
+"119": BEHAVE_ACC_Z_END
+"120": BEHAVE_ELAPSED
+"121": BEHAVE_UNIQUE_ID
+"122": MDI_CRASH_DETECTED
+"123": ""
+"124": ""
+"125": ""
+"126": LAST_CALIB_ACCELERO_TIME
+"127": MDI_EVENT
+"128": ""
+"129": ""
+"130": ""
+"131": ""
+"132": ""
+"133": ""
+"134": ""
+"135": ""
+"136": ""
+"137": ""
+"138": ""
+"139": ""
+"140": ""
+"141": ""
+"142": ""
+"143": ""
+"144": ""
+"145": ""
+"146": ""
+"147": ""
+"148": ""
+"149": ""
+"150": MDI_EXT_BATT_LOW
+"151": MDI_EXT_BATT_VOLTAGE
+"152": MDI_PANIC_STATE
+"153": MDI_PANIC_MESSAGE
+"154": MDI_DTC_MIL
+"155": MDI_DTC_NUMBER
+"156": MDI_DTC_LIST
+"157": MDI_RPM_MAX
+"158": MDI_RPM_MIN
+"159": MDI_RPM_AVERAGE
+"160": MDI_RPM_OVER
+"161": ""
+"162": ""
+"163": ""
+"164": ""
+"165": ""
+"166": ""
+"167": ""
+"168": ""
+"169": ""
+"170": ""
+"171": ""
+"172": ""
+"173": ""
+"174": ""
+"175": ""
+"176": ""
+"177": ""
+"178": ""
+"179": ""
+"180": FMS_BRAKE_SWITCH
+"181": FMS_CLUTCH_SWITCH
+"182": FMS_CRUISE_CONTROL_STATE
+"183": FMS_DRIVER_IDS
+"184": FMS_FUEL_RATE
+"185": FMS_INSTANT_FUEL_ECONOMY
+"186": FMS_PTO_STATE
+"187": FMS_SERVICE_DISTANCE
+"188": FMS_TACH_OVERSPEED
+"189": FMS_TIRE_LOCATION
+"190": FMS_VEHICLE_DISTANCE
+"191": FMS_WHEEL_SPEED
+"192": FMS_TOTAL_AXLE_WEIGHT
+"193": ""
+"194": ""
+"195": ""
+"196": ""
+"197": ""
+"198": ""
+"199": ""
+"200": ""
+"201": ""
+"202": ""
+"203": ""
+"204": ""
+"205": ""
+"206": ""
+"207": ""
+"208": ""
+"209": ""
+"210": ""
+"211": ""
+"212": MDI_OBD_PID
+"213": ""
+"214": ""
+"215": MDI_OBD_PID_1
+"216": MDI_OBD_PID_2
+"217": MDI_OBD_PID_3
+"218": MDI_OBD_PID_4
+"219": MDI_OBD_PID_5
+"220": MDI_SQUARELL_LAST_RECORDED_MESSAGE_PART_1
+"221": MDI_SQUARELL_LAST_RECORDED_MESSAGE_PART_2
+"222": MDI_SQUARELL_LAST_RECORDED_MESSAGE_PART_3
+"223": ""
+"224": ""
+"225": ""
+"226": ""
+"227": ""
+"228": ""
+"229": ""
+"230": ""
+"231": ""
+"232": ""
+"233": ""
+"234": MDI_VEHICLE_STATE
+"235": MDI_OBD_SPEED
+"236": MDI_OBD_RPM
+"237": MDI_OBD_FUEL
+"238": MDI_OBD_VIN
+"239": MDI_OBD_MILEAGE
+"240": MDI_JOURNEY_TIME
+"241": MDI_IDLE_JOURNEY
+"242": MDI_DRIVING_JOURNEY
+"243": ""
+"244": MDI_OVERSPEED_COUNTER
+"245": MDI_TOW_AWAY
+"246": MDI_ODO_JOURNEY
+"247": MDI_OVERSPEED
+"248": MDI_MAX_SPEED_JOURNEY
+"249": MDI_JOURNEY_STATE
+"250": MDI_RECORD_REASON
