Fix MDI_ in fields.

--- a/web_shell/local_cloud/API/mapping_track_field_number.yml
+++ b/web_shell/local_cloud/API/mapping_track_field_number.yml
@@ -1,42 +1,42 @@
 "0": ""
 "1": ""
 "2": ""
-"3": MDI_GPRMC_VALID
+"3": GPRMC_VALID
 "4": ""
 "5": ""
 "6": ""
 "7": ""
-"8": MDI_GPS_SPEED
-"9": MDI_GPS_DIR
+"8": GPS_SPEED
+"9": GPS_DIR
 "10": ""
 "11": ""
 "12": ""
 "13": ""
-"14": MDI_DIO_IGNITION
-"15": MDI_BATT
-"16": MDI_GPRS_HEADER
-"17": MDI_RSSI
+"14": DIO_IGNITION
+"15": BATT
+"16": GPRS_HEADER
+"17": RSSI
 "18": ""
-"19": MDI_CHRONOTACHYGRAPH_FIRST_DRIVER_STATE
-"20": MDI_CHRONOTACHYGRAPH_FIRST_DRIVER_DRIVING_STATE
-"21": MDI_CHRONOTACHYGRAPH_DAILYMETER
-"22": MDI_CHRONOTACHYGRAPH_ODOMETER
-"23": MDI_ODO_PARTIAL_KM
-"24": MDI_ODO_FULL
-"25": MDI_CHRONOTACHYGRAPH_DRIVING_TIME
-"26": MDI_DIO_ALARM
-"27": MDI_DRIVER_ID
-"28": MDI_TEMP_1
-"29": MDI_TEMP_2
-"30": MDI_TEMP_3
-"31": MDI_TEMP_4
-"32": MDI_TEMP_5
-"33": MDI_TEMP_6
-"34": MDI_TEMP_7
-"35": MDI_TEMP_8
-"36": MDI_TEMP_9
-"37": MDI_TEMP_10
-"38": MDI_DIO_IN_TOR
+"19": CHRONOTACHYGRAPH_FIRST_DRIVER_STATE
+"20": CHRONOTACHYGRAPH_FIRST_DRIVER_DRIVING_STATE
+"21": CHRONOTACHYGRAPH_DAILYMETER
+"22": CHRONOTACHYGRAPH_ODOMETER
+"23": ODO_PARTIAL_KM
+"24": ODO_FULL
+"25": CHRONOTACHYGRAPH_DRIVING_TIME
+"26": DIO_ALARM
+"27": DRIVER_ID
+"28": TEMP_1
+"29": TEMP_2
+"30": TEMP_3
+"31": TEMP_4
+"32": TEMP_5
+"33": TEMP_6
+"34": TEMP_7
+"35": TEMP_8
+"36": TEMP_9
+"37": TEMP_10
+"38": DIO_IN_TOR
 "39": ""
 "40": ""
 "41": ""
@@ -50,54 +50,54 @@
 "49": ""
 "50": ""
 "51": ""
-"52": MDI_CHRONOTACHYGRAPH_FIRST_DRIVER_ID
-"53": MDI_AREA_LIST
-"54": MDI_CHRONOTACHYGRAPH_TIMESTAMP
-"55": MDI_GPS_FIXED_SAT_NUM
-"56": MDI_MVT_STATE
-"57": MDI_BOOT_REASON
-"58": MDI_SHUTDOWN_TYPE_AND_REASON
-"59": MDI_BATT_VOLT
-"60": MDI_TX_KBYTES
-"61": MDI_RX_KBYTES
-"62": MDI_BATT_WARMUP
-"63": MDI_BATT_CHARGING
-"64": MDI_CHRONOTACHYGRAPH_SECOND_DRIVER_STATE
-"65": MDI_CHRONOTACHYGRAPH_SECOND_DRIVER_ID
-"66": MDI_CHRONOTACHYGRAPH_VRN
-"67": MDI_CHRONOTACHYGRAPH_VIN
-"68": MDI_DIO_OUT_TOR
-"69": MDI_RELAYCONTROL_STATE
-"70": MDI_MODEM_SIM_ICCID
-"71": MDI_MODEM_SIM_IMSI
-"72": MDI_SERIAL_PPP_STATE
-"73": MDI_SMARTCARD_STATE
-"74": MDI_SMARTCARD_SERIAL_NUMBER
-"75": MDI_SMARTCARD_EXPIRACY_DATE
-"76": MDI_SMARTCARD_USER_NUMBER
-"77": MDI_SMARTCARD_NAME
-"78": MDI_SMARTCARD_SURNAME
-"79": MDI_SMARTCARD_BIRTHDAY
-"80": MDI_SMARTCARD_ADDRESS
-"81": MDI_SMARTCARD_HIRING_NUMBER
-"82": MDI_SMARTCARD_HIRING_DATE
-"83": MDI_SMARTCARD_PHONE_NUMBER
-"84": MDI_SMARTCARD_LICENSE_NUMBER
-"85": MDI_SMARTCARD_PARC_NUMBER
-"86": MDI_SMARTCARD_SECU_NUMBER
-"87": MDI_CONNECTED_BOARD_ID
-"88": MDI_FMS_TOTAL_USED_FUEL
-"89": MDI_FMS_FUEL_LEVEL
-"90": MDI_FMS_AXLE_LOCATION
-"91": MDI_FMS_TOTAL_AXLE_WEIGHT
-"92": MDI_FMS_ENGINE_HOURS
-"93": MDI_FMS_VEHICLE_ID
-"94": MDI_FMS_SOFTWARE_ID
-"95": MDI_FMS_VEHICLE_DISTANCE
-"96": MDI_FMS_SERVICE_DISTANCE
-"97": MDI_FMS_ENGINE_COOLANT_TEMP
-"98": MDI_FMS_INFORMATION
-"99": MDI_BOARD_ID
+"52": CHRONOTACHYGRAPH_FIRST_DRIVER_ID
+"53": AREA_LIST
+"54": CHRONOTACHYGRAPH_TIMESTAMP
+"55": GPS_FIXED_SAT_NUM
+"56": MVT_STATE
+"57": BOOT_REASON
+"58": SHUTDOWN_TYPE_AND_REASON
+"59": BATT_VOLT
+"60": TX_KBYTES
+"61": RX_KBYTES
+"62": BATT_WARMUP
+"63": BATT_CHARGING
+"64": CHRONOTACHYGRAPH_SECOND_DRIVER_STATE
+"65": CHRONOTACHYGRAPH_SECOND_DRIVER_ID
+"66": CHRONOTACHYGRAPH_VRN
+"67": CHRONOTACHYGRAPH_VIN
+"68": DIO_OUT_TOR
+"69": RELAYCONTROL_STATE
+"70": MODEM_SIM_ICCID
+"71": MODEM_SIM_IMSI
+"72": SERIAL_PPP_STATE
+"73": SMARTCARD_STATE
+"74": SMARTCARD_SERIAL_NUMBER
+"75": SMARTCARD_EXPIRACY_DATE
+"76": SMARTCARD_USER_NUMBER
+"77": SMARTCARD_NAME
+"78": SMARTCARD_SURNAME
+"79": SMARTCARD_BIRTHDAY
+"80": SMARTCARD_ADDRESS
+"81": SMARTCARD_HIRING_NUMBER
+"82": SMARTCARD_HIRING_DATE
+"83": SMARTCARD_PHONE_NUMBER
+"84": SMARTCARD_LICENSE_NUMBER
+"85": SMARTCARD_PARC_NUMBER
+"86": SMARTCARD_SECU_NUMBER
+"87": CONNECTED_BOARD_ID
+"88": FMS_TOTAL_USED_FUEL
+"89": FMS_FUEL_LEVEL
+"90": FMS_AXLE_LOCATION
+"91": FMS_TOTAL_AXLE_WEIGHT
+"92": FMS_ENGINE_HOURS
+"93": FMS_VEHICLE_ID
+"94": FMS_SOFTWARE_ID
+"95": FMS_VEHICLE_DISTANCE
+"96": FMS_SERVICE_DISTANCE
+"97": FMS_ENGINE_COOLANT_TEMP
+"98": FMS_INFORMATION
+"99": BOARD_ID
 "100": BEHAVE_ID
 "101": BEHAVE_LONG
 "102": BEHAVE_LAT
