Rename track field number to default.

--- a/web_shell/local_cloud/API/default_mapping_track_field_number.yml
+++ b/web_shell/local_cloud/API/default_mapping_track_field_number.yml
@@ -249,3 +249,7 @@
 "248": MDI_MAX_SPEED_JOURNEY
 "249": MDI_JOURNEY_STATE
 "250": MDI_RECORD_REASON
+
+"500": test_average
+"501": test_grup
+"502": test_jambon
