Fix data injection.

--- a/web_shell/local_cloud/API/default_mapping_track_field_number.yml
+++ b/web_shell/local_cloud/API/default_mapping_track_field_number.yml
@@ -250,6 +250,6 @@
 "249": MDI_JOURNEY_STATE
 "250": MDI_RECORD_REASON
 
-"500": test_average
-"501": test_grup
-"502": test_jambon
+"5000": TEST_ENH_DATA_GATE
+"5001": TEST_ENH_DATA_SPEED
+"5002": TEST_ENH_DATA_DISTANCE
