--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ web_shell/local_cloud/config/schedule.rb
 
 # package output
 *.tar.gz
+
+agent_generated_source
+whenever_cron
+agents_project_source
+builder/config/schedule.rb
