Adding collection to default agent.

--- a/web_shell/agents_generator/sample_agent/config/config.yml
+++ b/web_shell/agents_generator/sample_agent/config/config.yml
@@ -3,6 +3,7 @@ default: &DEFAULT
   subscribe_presence: false
   subscribe_message: false
   subscribe_track: false
+  subscribe_collection: false
 
 development: *DEFAULT
 production: *DEFAULT
