Sync modif for new stats features.

--- a/web_shell/agents_generator/sample_agent/config/config.yml
+++ b/web_shell/agents_generator/sample_agent/config/config.yml
@@ -4,6 +4,7 @@ default: &DEFAULT
   subscribe_message: false
   subscribe_track: false
   subscribe_collection: false
+  subscribe_cloud_event: false
 
 development: *DEFAULT
 production: *DEFAULT
