--- a/web_shell/agents_generator/sample_agent/config/config.yml
+++ b/web_shell/agents_generator/sample_agent/config/config.yml
@@ -12,11 +12,14 @@ default: &DEFAULT
   subscribe_message: false
    # can be a single string or an array of string (ex dynamic_channel_str)
   message_whitelist_channels: com.mdi.services.XXProjectName
+  # if you need to output somme content to the cloud, please specify your output here
+  message_injection_whitelist_channels: com.mdi.services.XXProjectName
+
 
   ############## tracks ##############################
   # set to true if you want to receive tracks
   subscribe_track: false
-  # can be a single string, an array of string (['GPS_SPEED','GPS_DIR'] is set as an example, please put your needed fields)
+  # can be a single string, an array of string (['GPS_SPEED','GPS_DIR'] is set as an example, please put your needed fields).
   track_whitelist_fields: ['GPS_SPEED','GPS_DIR']
   # you will only be able to fetch last values of whitelisted fields
   # 0: no last value will be available
@@ -24,6 +27,17 @@ default: &DEFAULT
   track_keep_last_known_values_mode: 0
   track_remove_position: false
   track_remove_time: false
+
+  # if you need to output somme content to the cloud, please specify your output here (['ENH_MY_OUTPUT_FIELD'] is set as an example, please put your needed fields).
+  track_injection_whitelist_fields: ['ENH_MY_OUTPUT_FIELD']
+
+
+
+  # if your functionnalities require to have new field created in the cloud, please create them bellow (following the example):
+
+
+
+
 
   ############## collections #########################
   # set to true if you want to receive collections
