--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "web_shell/local_cloud/ragent_bay"]
 	path = web_shell/local_cloud/ragent_bay
-	url = https://github.com/xward/ragent_bay.git
+	url = https://github.com/mobile-devices/ragent_bay.git
