--- a/web_shell/local_cloud_config/Gemfile
+++ b/web_shell/local_cloud_config/Gemfile
@@ -9,4 +9,5 @@ gem 'rack-flash3'
 gem 'redcarpet'
 gem 'yard'
 gem 'github-markup'
-gem 'securerandom'
+# gem 'securerandom'
+gem 'rubysl-securerandom'
